# counter-uas-interception-guidance

./: README.md
camera_v0/: CMakeLists.txt  package.xml
camera_v0/launch/: siyi_launch.py
camera_v0/src/: crc16_table.inc  gimbal_control_node.cpp  gimbal_stream_node.cpp
counter_uas_geoloca/: CMakeLists.txt  package.xml
counter_uas_guidance/: CMakeLists.txt  README.md  package.xml
counter_uas_guidance/config/: params.yaml
counter_uas_guidance/include/: config_param_offboard_ctrl.h  config_param_yaw_ctrl.h  counter_uas_offboard_ctrl_lib.h  global_header.h
counter_uas_guidance/include/yaw_rate_ctrl/: yaw_rate_ctrl.h
counter_uas_guidance/launch/: counter_uas_offboard_ctrl.launch.py
counter_uas_guidance/lib/: config_param_offboard_ctrl.cpp  config_param_yaw_ctrl.cpp  counter_uas_offboard_ctrl_lib.cpp  test.cpp
counter_uas_guidance/lib/yaw_rate_ctrl/: yaw_rate_ctrl.cpp
counter_uas_guidance/msg/: GimbalMode.msg
counter_uas_guidance/src/: main_counter_uas_offboard_ctrl_node.cpp
counter_uas_imgproc/: CMakeLists.txt  package.xml
counter_uas_imgproc/config/detection/: params.yaml  params_kari_antidrone_label_info_yolo_det.yaml
counter_uas_imgproc/include/: config_param_detection.h  counter_uas_yolov8p2_infer_lib.h  global_header.h
counter_uas_imgproc/include/misc/: colormat.h  misc_calc_lib.h  misc_func.h
counter_uas_imgproc/include/yolov8_p2_infer_engine/: yolov8_p2_infer_engine.h
counter_uas_imgproc/include/yolov8_p2_lib/: calibrator.h  config.h  preprocess.h  types.h  utils.h  yololayer.h
counter_uas_imgproc/launch/: counter_uas_yolov8p2_infer.launch.py
counter_uas_imgproc/lib/: config_param_detection.cpp  counter_uas_yolov8p2_infer_lib.cpp
counter_uas_imgproc/lib/misc/: misc_calc_lib.cpp  misc_func.cpp
counter_uas_imgproc/lib/yolov8_p2_infer_engine/: yolov8_p2_infer_engine.cpp
counter_uas_imgproc/lib/yolov8_p2_lib/: block.cpp  calibrator.cpp  model.cpp  postprocess.cpp
counter_uas_imgproc/msg/: BoundingBox.msg  BoundingBoxes.msg  IllegalDroneStatus.msg
counter_uas_imgproc/src/: main_counter_uas_yolov8p2_infer_node.cpp
counter_uas_tracking/: CMakeLists.txt  package.xml
counter_uas_tracking/include/: config_param_mount_ctrl.h  global_header.h  pidController.h
counter_uas_tracking/include/mount_ctrl/: calVFov.h  pidCtrl.h
counter_uas_tracking/lib/: config_param_mount_ctrl.cpp  pidController.cpp
counter_uas_tracking/lib/mount_ctrl/: calVFov.cpp
siyi_eo_ros2/: CMakeLists.txt  package.xml
siyi_eo_ros2/config/: camera_status_params.yaml
siyi_eo_ros2/include/: config_param_status.h  global_header.h  siyi_eo_status_lib.h
siyi_eo_ros2/launch/: siyi_eoir_ros2.launch.py
siyi_eo_ros2/lib/: config_param_status.cpp  siyi_eo_status_lib.cpp
siyi_eo_ros2/scripts/: test.py
siyi_eo_ros2/src/: main_siyi_eo_status_node.cpp
